--- a/requirements.txt
+++ b/requirements.txt
@@ -1,215 +1,6 @@
-absl-py==2.1.0
-acres==0.3.0
-altair==4.2.0
-annotated-types==0.7.0
-anyio==4.4.0
-astunparse==1.6.3
-attrs==22.1.0
-bcrypt==4.3.0
-blinker==1.8.2
-blis==1.2.0
-cachetools==5.2.0
-catalogue==2.0.10
-certifi==2024.7.4
-cffi==1.15.1
-chardet==5.0.0
-charset-normalizer==2.1.1
-ci-info==0.3.0
-click==8.1.7
-cloudpathlib==0.20.0
-colorama==0.4.6
-commonmark==0.9.1
-comtypes==1.4.10
-confection==0.1.5
-configobj==5.0.9
-configparser==7.1.0
-contourpy==1.3.0
-cryptography==37.0.4
-cycler==0.11.0
-cymem==2.0.6
-decorator==5.1.1
-distro==1.9.0
-dnspython==2.6.1
-docx==0.2.4
-docx2txt==0.8
-easyocr==1.7.2
-en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
-entrypoints==0.4
-et_xmlfile==2.0.0
-etelemetry==0.3.1
-exceptiongroup==1.2.2
-filelock==3.17.0
-Flask==3.0.3
-Flask-Bcrypt==1.0.1
-Flask-Cors==4.0.1
-Flask-Login==0.6.3
-Flask-SQLAlchemy==3.1.1
-flatbuffers==25.2.10
-fonttools==4.37.2
-fsspec==2025.2.0
-future==0.18.2
-gast==0.4.0
-geocoder==1.38.1
-geographiclib==1.52
-geopy==2.2.0
-gitdb==4.0.9
-GitPython==3.1.27
-google-auth==2.38.0
-google-auth-oauthlib==1.0.0
-google-pasta==0.2.0
-greenlet==3.1.1
-groq==0.9.0
-grpcio==1.70.0
-gunicorn==22.0.0
-h11==0.14.0
-h5py==3.13.0
-httpcore==1.0.5
-httplib2==0.22.0
-httpx==0.27.0
-idna==3.7
-imageio==2.37.0
-importlib-metadata==4.12.0
-importlib_resources==6.5.2
-isodate==0.6.1
-itsdangerous==2.2.0
-jax==0.4.30
-jaxlib==0.4.30
-Jinja2==3.1.4
-joblib==1.4.2
-jsonschema==4.15.0
-keras==2.12.0
-kiwisolver==1.4.4
-langcodes==3.3.0
-language_data==1.3.0
-lazy_loader==0.4
-libclang==18.1.1
-looseversion==1.3.0
-lxml==5.2.2
-marisa-trie==1.2.1
-Markdown==3.7
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-matplotlib==3.5.3
-mdurl==0.1.2
-ml_dtypes==0.5.1
-mpmath==1.3.0
-murmurhash==1.0.8
-mysql-connector-python==9.2.0
-neattext==0.1.3
-networkx==3.2.1
-nibabel==5.3.2
-ninja==1.11.1.3
-nipype==1.9.2
-nltk==3.7
-numpy==1.23.5
-oauthlib==3.2.2
-opencv-python==4.11.0.86
-opencv-python-headless==4.11.0.86
-openpyxl==3.1.5
-opt_einsum==3.4.0
-packaging==24.1
-pafy==0.5.5
-pandas==2.2.2
-pathlib==1.0.1
-pathlib_abc==0.1.1
-pathy==0.11.0
-pdf2image==1.17.0
-pdfminer.six==20231228
-pdfminer3==2018.12.3.0
-pdfplumber==0.11.5
-Pillow==9.2.0
-plac==1.1.3
-plotly==5.10.0
-preshed==3.0.7
-protobuf==3.20.3
-prov==2.0.1
-puremagic==1.28
-pyarrow==9.0.0
-pyasn1==0.6.1
-pyasn1_modules==0.4.1
-pyclipper==1.3.0.post6
-pycparser==2.21
-pycryptodome==3.15.0
-pydantic==1.10.21
-pydantic_core==2.20.1
-pydeck==0.8.0b1
-pydot==3.0.4
-Pygments==2.13.0
-pymongo==4.8.0
-Pympler==1.0.1
-PyMuPDF==1.25.3
-PyMySQL==1.0.2
-pyparsing==3.0.9
-PyPDF2==3.0.1
-pypdfium2==4.30.1
-pypiwin32==223
-pyresparser==1.0.6
-pyrsistent==0.18.1
-pytesseract==0.3.13
-python-bidi==0.6.6
-python-dateutil==2.9.0.post0
-python-docx==1.1.2
-python-dotenv==1.0.1
-pyttsx3==2.98
-pytz==2024.1
-pytz-deprecation-shim==0.1.0.post0
-pywin32==308
-pyxnat==1.6.3
-PyYAML==6.0.2
-ratelim==0.1.6
-rdflib==6.3.2
-regex==2022.8.17
-requests==2.28.1
-requests-oauthlib==2.0.0
-rich==12.5.1
-rsa==4.9
-scikit-image==0.24.0
-scikit-learn==1.5.1
-scipy==1.13.1
-semver==2.13.0
-shapely==2.0.7
-shellingham==1.5.4
-simplejson==3.20.1
-six==1.16.0
-smart-open==5.2.1
-smmap==5.0.0
-sniffio==1.3.1
-sortedcontainers==2.4.0
-spacy==3.8.3
-spacy-legacy==3.0.12
-spacy-loggers==1.0.3
-SQLAlchemy==2.0.38
-srsly==2.5.1
-streamlit==1.12.2
-streamlit-tags==1.2.8
-sympy==1.13.1
-tenacity==8.0.1
-tensorboard==2.12.3
-tensorboard-data-server==0.7.2
-tensorflow==2.12.0
-tensorflow-estimator==2.12.0
-tensorflow-intel==2.12.0
-tensorflow-io-gcs-filesystem==0.31.0
-termcolor==2.5.0
-thinc==8.3.4
-threadpoolctl==3.5.0
-tifffile==2024.8.30
-toml==0.10.2
-toolz==0.12.0
-torch==2.6.0
-torchvision==0.21.0
-tornado==6.2
-tqdm==4.64.1
-traits==7.0.2
-typer==0.4.2
-typing_extensions==4.12.2
-tzdata==2024.1
-tzlocal==4.2
-urllib3==1.26.12
-validators==0.20.0
-wasabi==0.10.1
-watchdog==6.0.0
-weasel==0.4.1
-Werkzeug==3.0.3
-wrapt==1.14.1
-zipp==3.8.1
+Flask==2.2.5
+opencv-python==4.9.0.80
+numpy==1.24.4
+tensorflow==2.15.0
+gdown==5.1.0
+Werkzeug==2.2.3
